examples/test/testpolicy16853.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16853
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key4: value15
      key13: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value46
          key18: value17
          key19: value29
      podSelector:
        matchLabels:
          key15: value41
